%% Diagrama ER del esquema de base de datos (Jepri Dashboard)
%% Referencia: scripts/supabase_sql.sql

erDiagram
    auth {
        uuid id PK
        string email
        string password_hash
        enum role
        boolean is_active
        datetime last_login
        datetime created_at
        datetime updated_at
    }

    customer {
        uuid id PK
        string name
        string contact
        string phone
        uuid user_id FK
        datetime created_at
    }

    operator {
        uuid id PK
        string name
        string phone
        uuid user_id FK
        datetime created_at
    }

    admin {
        uuid id PK
        string name
        string phone
        uuid user_id FK
        datetime created_at
    }

    supplier {
        uuid id PK
        string name
        string contact
        string phone
        uuid user_id FK
        datetime created_at
    }

    product {
        uuid id PK
        string name
        string description
        enum unit
        string main_photo
        decimal reference_price
        datetime created_at
    }

    offer {
        uuid id PK
        uuid product_id FK
        uuid supplier_id FK
        decimal price
        boolean available
    }

    sale_order {
        uuid id PK
        uuid customer_id FK
        uuid distribution_plan_id FK
        enum status
        float service_fee
        float delivery_fee
        string notes
        uuid created_by_admin_id FK
        uuid created_by_customer_id FK
        datetime created_at
        int order_seq
        string order_code
    }

    sale_item {
        uuid id PK
        uuid sale_order_id FK
        uuid product_id FK
        decimal required_quantity
        decimal delivered_quantity
        datetime delivered_at
        uuid delivered_by
        datetime created_at
    }

    shopping_cart {
        uuid id PK
        uuid customer_id FK
        uuid product_id FK
        decimal quantity
        datetime created_at
        datetime updated_at
    }

    distribution_plan {
        uuid id PK
        date plan_date
        enum status
        uuid operator_id FK
        string notes
        datetime cutoff_at
        datetime created_at
        datetime updated_at
        int plan_seq
        string plan_code
    }

    purchase_order {
        uuid id PK
        uuid supplier_id FK
        uuid distribution_plan_id FK
        enum status
        string notes
        uuid created_by FK
        datetime created_at
        datetime received_at
        int purchase_seq
        string purchase_code
    }

    purchase_item {
        uuid id PK
        uuid purchase_order_id FK
        uuid offer_id FK
        decimal quantity
        decimal actual_price
        decimal received_quantity
        uuid received_by FK
        datetime received_at
        datetime created_at
    }

    fulfillment {
        uuid id PK
        uuid sale_item_id FK
        uuid purchase_item_id FK
        datetime created_at
    }

    %% Relaciones (cardinalidades)
    customer }o--|| auth : user_account
    operator }o--|| auth : user_account
    admin }o--|| auth : user_account
    supplier }o--|| auth : user_account

    offer }o--|| product : product
    offer }o--|| supplier : supplier

    sale_order }o--|| customer : customer
    sale_order }o--|| distribution_plan : plan
    sale_order }o--|| admin : created_by_admin
    sale_order }o--|| customer : created_by_customer

    sale_item }o--|| sale_order : order
    sale_item }o--|| product : product

    shopping_cart }o--|| customer : customer
    shopping_cart }o--|| product : product

    distribution_plan }o--|| operator : operator

    purchase_order }o--|| supplier : supplier
    purchase_order }o--|| distribution_plan : plan
    purchase_order }o--|| auth : created_by

    purchase_item }o--|| purchase_order : order
    purchase_item }o--|| offer : offer
    purchase_item }o--|| auth : received_by

    fulfillment }o--|| sale_item : sale_item
    fulfillment }o--|| purchase_item : purchase_item